# mountainnetworkcalendarscraper

./: .gitignore  LICENSE.txt  create_ical.py  pyproject.toml
.github/workflows/: main.yml
mountainnetworkcalendarscraper/: main.py
